--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
 		<h3>Smith & Jones Architects</h3>
 			<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
 			<button>Learn More</button>
-			<img src= "img/home/home-img-1.png"  alt="" class="src">
+			<div class="pic1">
+				<img src= "img/home/home-img-1.png"  alt="" class="pic1">
+			</div>
+	</section>
 
 		<section class="Futuristic">
-				<h3>Futuristic Designs</h3>
-					<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-					<button>View Designs</button>
-					<img src= "img/home/home-img-2.png"  alt="" class="src">
+			<h3>Futuristic Designs</h3>
+				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+				<button>View Designs</button>
+				<div class="pic2">
+					<img src= "img/home/home-img-2.png"  alt="" class="pic2">
+				</div>
 	</section> <!--Futuristic-->
 </div> <!--Top Content End-->
 
@@ -62,21 +67,27 @@
 	<h2>Recent Projects</h2>
 
 	<section class="villas">
-		<img src="img/home/home-villas-img.png" alt="" class="src">
+		<div class="pic3">
+			<img src="img/home/home-villas-img.png" alt="" class="pic3">
+		</div>
 		<h3>THE VILLAS</h3>
-		<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
-		<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
+			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
 	</section> <!--End of Villas-->
 
 	<section class="OUTSKIRTS">
-			<img src="img/home/home-outskirts-img.png" alt="" class="src">
-			<h3>OUTSKIRTS</h3>
+		<div class="pic4">
+				<img src="img/home/home-outskirts-img.png" alt="" class="pic4">
+		</div>
+		<h3>OUTSKIRTS</h3>
 			<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
 			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-		</section> <!--End of OUTSKIRTS-->
+	</section> <!--End of OUTSKIRTS-->
 
-	<section class="OUTSKIRTS">
-			<img src="img/home/home-the-blocks-img.png" alt="" class="src">
+	<section class="THEBLOCKS">
+		<div class="pic5">
+			<img src="img/home/home-the-blocks-img.png" alt="" class="pic5">
+		</div>
 			<h3>OUTSKIRTS</h3>
 			<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
 			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
