--- a/index.html
+++ b/index.html
@@ -13,129 +13,150 @@
 </head>
 
 <body>
-<div class="container">
+
 
 <!-- Menu Content -->
 <div class="top-menu-content">
+	<div class="container">
 		<h2 class="SJ">S&J</h2>
 		<nav>
 			<a class="top-menu" href ="#">Home</a>
 			<a class="top-menu" href ="#">Services</a>
 			<a class="top-menu" href ="#">Contact</a>
 		</nav>
+	</div>
 </div>
+		
 <!-- Top Menu Content -->
 
 
 <!-- Home Page Content: -->
 <div class="jumbotron">
-	<h2>
-		Integrity,<br>
-		Excellence,<br>
-		Progress.
-	</h2>
-	<img src= "img/home/home-jumbotron.png"  alt="" class="src">
+	<div class="container">
+		<h2>
+			Integrity,<br>
+			Excellence,<br>
+			Progress.
+		</h2>
+	</div>
 </div>
+
 	
 <!-- Home page Content End -->
 
 <!-- Top Content Beginning -->
 
 <div class="top-content">
-	<section class="smithJones">
-		<h3>Smith & Jones Architects</h3>
-			<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-			<button>Learn More</button>
-			<div class="pic1">
-				<img src= "img/home/home-img-1.png"  alt="" class="pic1">
+	<div class="container">	
+		<div class="card">
+			<img class="img-right" src="img/home/home-img-1.png">
+			<div class="card-content">
+				<h3>Smith & Jones Architects</h3>
+				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
+				<button>Learn More</button>
 			</div>
-	</section>
-
-		<section class="Futuristic">
-			<h3>Futuristic Designs</h3>
+		</div>
+		<div class="card">
+			<img class="img-left" src="img/home/home-img-2.png">
+			<div class="card-content">
+				<h3>Futuristic Designs</h3>
 				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
 				<button>View Designs</button>
-				<div class="pic2">
-					<img src= "img/home/home-img-2.png"  alt="" class="pic2">
-				</div>
-	</section> <!--Futuristic-->
-</div> <!--Top Content End-->
+			</div>
+		</div>
+	</div>
+</div> <!--Futuristic-->
+<!--Top Content End-->
+		
 
 <!-- Main Content Beginning -->
 
 <div class="main-content-bottom">
-	<h2>Recent Projects</h2>
+	<div class="container">
+		<h2>Recent Projects</h2>
 
-	<section class="villas">
-		<div class="pic3">
-			<img src="img/home/home-villas-img.png" alt="" class="pic3">
-		</div>
-		<h3>THE VILLAS</h3>
-			<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
-			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-	</section> <!--End of Villas-->
+		<section class="project">
+			<div class="project-header">
+				<img src="img/home/home-villas-img.png" alt="" class="pic3">
+				<h3>THE VILLAS</h3>
+			</div>
+			<div class="project-content">
+				<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
+				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			</div>
+		</section> <!--End of Villas-->
 
-	<section class="OUTSKIRTS">
-		<div class="pic4">
+		<section class="project">
+			<div class="project-header">
 				<img src="img/home/home-outskirts-img.png" alt="" class="pic4">
-		</div>
-		<h3>OUTSKIRTS</h3>
-			<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
-			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-	</section> <!--End of OUTSKIRTS-->
-
-	<section class="THEBLOCKS">
-		<div class="pic5">
-			<img src="img/home/home-the-blocks-img.png" alt="" class="pic5">
-		</div>
-			<h3>OUTSKIRTS</h3>
-			<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
-			<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+				<h3>OUTSKIRTS</h3>
+			</div>
+			<div class="project-content">
+				<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
+				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			</div>
 		</section> <!--End of OUTSKIRTS-->
 
+		<section class="project">
+			<div class="project-header">
+				<img src="img/home/home-the-blocks-img.png" alt="" class="pic5">
+				<h3>THE BLOCKS</h3>
+			</div>
+			<div class="project-content">
+				<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
+				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+			</div>
+		</section> <!--End of THE BLOCKS-->
+	</div>
 </div> <!--End of Main Content-->
 
 <!-- FOOTER CONTENT-->
 <footer>
-	<div class="footer-content">
-		<h3>Interested in starting a project?
-			<br>
-			Let's talk:
-		</h3>
-		<section class="email">
+	<div>
+		<div>
+			<h3>Interested in starting a project?</h3>
+				<br>
+				Let's talk:
+			</h3>
+			<div>
 				<form> Email: <input type="text name" id = "Enter email"> </form>
-		</section>
-		<p>We'll never share your email with anyone else.</p>
+				<p>We'll never share your email with anyone else.</p>
+			</div>
+		</div>
+		<div>
+			<h4>New York</h4>
+			<p>
+				123 Lane<br>
+				Suite 100<br>
+				Albany, NY 12345<br>
+				02 555 0144
+			</p>
+		</div> <!--NY-->
+
+		<div>
+			<h4>Florida</h4>
+			<p>
+				Ocean Drive<br>
+				Suite 201<br>
+				Orlando, FL 22345<br>
+				502 555 0144
+			</p>
+		</div> <!--Florida-->
+
+		<div>
+			<h4>California</h4>
+			<p>
+				Mountain Street<br>
+				Suite 105<br>
+				San Diego, CA<br>
+				702 555 0144
+			</p>
+		</div> <!--NY-->
 	</div>
-	<address class="NewYork">
-		<h4>New York</h4>
-		123 Lane<br>
-		Suite 100<br>
-		Albany, NY 12345<br>
-		02 555 0144
-	</address> <!--NY-->
-
-	<address class="Florida">
-		<h4>Florida</h4>
-		Ocean Drive<br>
-		Suite 201<br>
-		Orlando, FL 22345<br>
-		502 555 0144
-	</address> <!--Florida-->
-
-	<address class="California">
-		<h4>California</h4>
-		Mountain Street<br>
-		Suite 105<br>
-		San Diego, CA<br>
-		702 555 0144
-	</address> <!--NY-->
 
 	<p class="copyright">Copyright © 2018 Smith and Jones</p>
-
-	<script src="js/index.js"></script>
 </footer>
 
-</div> <!--Container-->
+<script src="js/index.js"></script>
 </body>
 </html>
