--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 <!-- Menu Content -->
 <div class="top-menu-content">
-	<div class="container">
-		<h2 class="SJ">S&J</h2>
-		<nav>
-			<a class="top-menu" href ="#">Home</a>
-			<a class="top-menu" href ="#">Services</a>
-			<a class="top-menu" href ="#">Contact</a>
-		</nav>
+	<h2 class="brand">S&J</h2>
+	<img src="img/nav-hamburger.png" alt="hamburger">
+	<div class="dropdown-content">
+		<a href="">Home</a>
+		<a href="">Services</a>
+		<a href="">class</a>
 	</div>
 </div>
+			
 		
 <!-- Top Menu Content -->
 
@@ -53,7 +53,7 @@
 			<div class="card-content">
 				<h3>Smith & Jones Architects</h3>
 				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-				<button>Learn More</button>
+				<button class="button">Learn More</button>
 			</div>
 		</div>
 		<div class="card">
@@ -61,7 +61,7 @@
 			<div class="card-content">
 				<h3>Futuristic Designs</h3>
 				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-				<button>View Designs</button>
+				<button class="button">View Designs</button>
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 		<section class="project">
 			<div class="project-header">
 				<img src="img/home/home-villas-img.png" alt="" class="pic3">
-				<h3>THE VILLAS</h3>
+				<h3 class="right-detail">THE VILLAS</h3>
 			</div>
 			<div class="project-content">
 				<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
@@ -89,7 +89,7 @@
 		<section class="project">
 			<div class="project-header">
 				<img src="img/home/home-outskirts-img.png" alt="" class="pic4">
-				<h3>OUTSKIRTS</h3>
+				<h3 class="left-detail">OUTSKIRTS</h3>
 			</div>
 			<div class="project-content">
 				<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
@@ -100,7 +100,7 @@
 		<section class="project">
 			<div class="project-header">
 				<img src="img/home/home-the-blocks-img.png" alt="" class="pic5">
-				<h3>THE BLOCKS</h3>
+				<h3 class="right-detail">THE BLOCKS</h3>
 			</div>
 			<div class="project-content">
 				<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
@@ -115,13 +115,12 @@
 	<div>
 		<div>
 			<h3>Interested in starting a project?</h3>
-				<br>
-				Let's talk:
+				<span>Let's talk:</span>
 			</h3>
-			<div>
-				<form> Email: <input type="text name" id = "Enter email"> </form>
-				<p>We'll never share your email with anyone else.</p>
+			<div class="form">
+				<form><input class="form-input" type="text" placeholder="Enter email"> </form>
 			</div>
+			<p>We'll never share your email with anyone else.</p>
 		</div>
 		<div>
 			<h4>New York</h4>
