Finished Index.html/Services.html/Contact.html Working on responsiveness for all

--- a/contact.html
+++ b/contact.html
@@ -12,49 +12,163 @@
 
 <body>
 
-	<h1>Contact</h1>
+<div class="top-menu-content">
+	<h2 class="brand">S&J</h2>
+	<img src="img/nav-hamburger.png" alt="hamburger">
+	<div class="dropdown-content">
+		<a href="">Home</a>
+		<a href="">Services</a>
+		<a href="">class</a>
+	</div>
+</div>
 
-<!-- Contactd Us Content 
-  Contact Us
+
+
+<div class="container-services">
+		<div class="jumbrotron-image">
+				<img src="img/contact/contact-jumbotron.png">
+					<h1>Contact Us</h1>
+		</div>
+</div>
+
   
-Get In Touch
 
-Email Address
-Enter Email
-We'll never share your email with anyone else.
+<div class="container-contact">
+	<div class="questionaire">
+		<div class="email">
+			<h2>Get in Touch</h2>
+			<span>Email address:</span>
+				<div class="form">
+					<form><input class="form-input" type="text" placeholder="Enter email"> </form>
+				</div>
+				<p>We'll never share your email with anyone else.</p>
+		</div>
+		
+		
+		<div class="buildings">
+			<span>How many buildings do you need planned?</span>
+			<div class="dropdown">
+				<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+				<div id="myDropdown" class="dropdown-content">
+					<a href="#1">1</a>
+					<a href="#2">2</a>
+					<a href="#3">3</a>
+					<a href="#4">4</a>
+					<a href="#5">5</a>
+				</div>
+				</div>
+		</div>
+		
+	
 
-How many buildings do you need planned?
-1-5
+		<div class="overview">
+			<span>Provide a brief overview of your project needs:</span>
+			<div class="form">
+				<form><input class="form-needs" type="text" placeholder=""> </form>
+			</div>
+		</div>
+		
 
-Provide a brief overview of your project needs:
+		
+		<div class="radio">
+			<form action="">
+					<input type="radio" name="gender" value="male"> I am a small business<br>
+					<input type="radio" name="gender" value="female"> I am a residential owner<br>
+					<input type="radio" name="gender" value="other"> I am a Corporation
+				</form>
+			</div>	
+		
+		<div class="container-contact">
+			<button class="button">Submit</button>
+		</div>
+			
+	</div>
 
-I am a small business
-I am a residential owner
-I am a corporation
 
-Submit
 
-Where We Work
 
-New York
-123 Lane
-Suite 100
-Albany, NY 12345
-202 555 0144
+	<div class="container-contact">
+		<div class="flex-container-2">
+			<h2>Where We Work</h2>
 
-Florida
-Ocean Drive
-Suite 201
-Orlando, FL 22345
-502 555 0144
+			<div class="paragraphs">
+				<h3>New York</h3>
+				<p>
+					123 Lane<br>
+					Suite 100<br>
+					Albany, NY 12345<br>
+					02 555 0144
+				</p>
+			</div> <!--NY-->
+		
+			<div class="paragraphs">
+				<h3>Florida</h3>
+				<p>
+					Ocean Drive<br>
+					Suite 201<br>
+					Orlando, FL 22345<br>
+					502 555 0144
+				</p>
+			</div> <!--Florida-->
+		
+			<div class="paragraphs">
+				<h4>California</h4>
+				<p>
+					Mountain Street<br>
+					Suite 105<br>
+					San Diego, CA<br>
+					702 555 0144
+				</p>
+			</div> <!--NY-->
+		</div>
+	</div>
+</div>
 
-California
-Mountain Street
-Suite 105
-San Diego, CA 22345
-702 555 0144
+<footer>
+<div>
+	<div>
+		<h3>Interested in starting a project?</h3>
+			<span>Let's talk:</span>
+		</h3>
+		<div class="form">
+			<form><input class="form-input" type="text" placeholder="Enter email"> </form>
+		</div>
+		<p>We'll never share your email with anyone else.</p>
+	</div>
+	<div>
+		<h4>New York</h4>
+		<p>
+			123 Lane<br>
+			Suite 100<br>
+			Albany, NY 12345<br>
+			02 555 0144
+		</p>
+	</div> <!--NY-->
 
--->
+	<div>
+		<h4>Florida</h4>
+		<p>
+			Ocean Drive<br>
+			Suite 201<br>
+			Orlando, FL 22345<br>
+			502 555 0144
+		</p>
+	</div> <!--Florida-->
+
+	<div>
+		<h4>California</h4>
+		<p>
+			Mountain Street<br>
+			Suite 105<br>
+			San Diego, CA<br>
+			702 555 0144
+		</p>
+	</div> <!--NY-->
+</div>
+		
+		<p class="copyright">Copyright © 2018 Smith and Jones</p>
+</footer>	
+	
 
 	<script src="js/index.js"></script>
 </body>
