--- a/services.html
+++ b/services.html
@@ -13,14 +13,14 @@
 <body>
 <!-- Top Menu Content -->
 <div class="top-menu-content">
-		<h2 class="brand">S&J</h2>
-		<img src="img/nav-hamburger.png" alt="hamburger">
-		<div class="dropdown-content">
-			<a href="">Home</a>
-			<a href="">Services</a>
-			<a href="">class</a>
-		</div>
+	<h2 class="brand">S&J</h2>
+	<img src="img/nav-hamburger.png" alt="hamburger">
+	<div class="dropdown-content">
+		<a href="">Home</a>
+		<a href="">Services</a>
+		<a href="">class</a>
 	</div>
+</div>
 <!-- Top Menu Content -->
 	
 	
@@ -66,83 +66,94 @@
 			</div>
 
 			<img class="img" img src="img/services/services-tab-pre-construction-img.png">
-		</div>
-	</div>
-			
-	<!-- <div class="tabs-item" data-tab="2">
-		<div class="tabs-item-title">Construction</div>
-		<div class="tabs-item-description">
-				Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
-		</div>
-		<div>
-			<img src="img/services/services-tab-construction-img.png">
-		</div>
-	</div>
-	<div class="tabs-item" data-tab="3">
-		<div class="tabs-item-title">Design Build</div>
-		<div class="tabs-item-description">
-			Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
-		</div>
-		<div>
-			<img src="img/services/services-tab-design-build-img.png">
-		</div>
-	</div>
-			
-	<div class="tabs-item" data-tab="4">
-		<div class="tabs-item-title">Sustainability</div>
-		<div class="tabs-item-description">
-				Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.
-		</div>
-	</div>
-		<div>
-			<img src="img/services/services-tab-sustainability-img.png"> -->
-		</div>
 	</div>
 </div>
-	<footer>
-		<div>
-			<div>
-				<h3>Interested in starting a project?</h3>
-					<span>Let's talk:</span>
-				</h3>
-				<div class="form">
-					<form><input class="form-input" type="text" placeholder="Enter email"> </form>
-				</div>
-				<p>We'll never share your email with anyone else.</p>
+
+<!-- 
+<div class="container-services">
+	<div class="tabs-items">
+		<div class="tabs-item tabs-item-selected" data-tab="2">
+			<div class="content">
+				<h2>Construction</h2>
+				<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
 			</div>
-			<div>
-				<h4>New York</h4>
-				<p>
-					123 Lane<br>
-					Suite 100<br>
-					Albany, NY 12345<br>
-					02 555 0144
-				</p>
-			</div> <!--NY-->
+			</div>
+
+			<img class="img" img src="img/services/services-tab-construction-img.png">
+	</div>
+</div>
+
+<div class="container-services">
+		<div class="tabs-items">
+			<div class="tabs-item tabs-item-selected" data-tab="3">
+				<div class="content">
+					<h2>Design Build</h2>
+					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
+				</div>
+				</div>
 	
-			<div>
-				<h4>Florida</h4>
-				<p>
-					Ocean Drive<br>
-					Suite 201<br>
-					Orlando, FL 22345<br>
-					502 555 0144
-				</p>
-			</div> <!--Florida-->
-	
-			<div>
-				<h4>California</h4>
-				<p>
-					Mountain Street<br>
-					Suite 105<br>
-					San Diego, CA<br>
-					702 555 0144
-				</p>
-			</div> <!--NY-->
+				<img class="img" img src="img/services/services-tab-design-build-img.png">
 		</div>
-		
-		<p class="copyright">Copyright © 2018 Smith and Jones</p>
-	</footer>	
+	</div>
+
+<div class="container-services">
+		<div class="tabs-items">
+			<div class="tabs-item tabs-item-selected" data-tab="4">
+				<div class="content">
+					<h2>Sustainability</h2>
+					<p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</br></br>Phosfluorescently engage worldwide methodologies with web-enabled technology. Interactively coordinate proactive e-commerce via process-centric "outside the box" thinking. Completely pursue scalable customer service through sustainable potentialities.</p>
+				</div>
+				</div>
+	
+				<img class="img" img src="img/services/services-tab-sustainability-img.png">
+		</div>
+</div> -->
+
+
+<footer>
+	<div>
+		<div>
+			<h3>Interested in starting a project?</h3>
+				<span>Let's talk:</span>
+			</h3>
+			<div class="form">
+				<form><input class="form-input" type="text" placeholder="Enter email"> </form>
+			</div>
+			<p>We'll never share your email with anyone else.</p>
+		</div>
+		<div>
+			<h4>New York</h4>
+			<p>
+				123 Lane<br>
+				Suite 100<br>
+				Albany, NY 12345<br>
+				02 555 0144
+			</p>
+		</div> <!--NY-->
+
+		<div>
+			<h4>Florida</h4>
+			<p>
+				Ocean Drive<br>
+				Suite 201<br>
+				Orlando, FL 22345<br>
+				502 555 0144
+			</p>
+		</div> <!--Florida-->
+
+		<div>
+			<h4>California</h4>
+			<p>
+				Mountain Street<br>
+				Suite 105<br>
+				San Diego, CA<br>
+				702 555 0144
+			</p>
+		</div> <!--NY-->
+	</div>
+	
+	<p class="copyright">Copyright © 2018 Smith and Jones</p>
+</footer>	
 
 	<script src="js/index.js"></script>
 </body>
