--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 <!-- Menu Content -->
 <div class="top-menu-content">
 	<h2 class="brand">S&J</h2>
-	<img src="img/nav-hamburger.png" alt="hamburger">
-	<div class="dropdown-content">
-		<a href="">Home</a>
-		<a href="">Services</a>
-		<a href="">class</a>
+	<!-- <img src="img/nav-hamburger.png" alt="hamburger"> -->
+	<div class="dropdown">
+		<div class="dropdown-content">
+				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/index.html">Home</a>
+				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/services.html">Services</a>
+				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/contact.html">Contact</a>
+		</div>
 	</div>
+	<img class="menu-expand" onclick="openNav()" src="img/nav-hamburger.png" alt="menu-expand">
+	<img class="menu-close" onclick="closeNav()" src="img/nav-hamburger-close.png" alt="menu-close">
 </div>
 			
 		
@@ -44,29 +48,37 @@
 	
 <!-- Home page Content End -->
 
-<!-- Top Content Beginning -->
+<section class="main-content">
+		<section class="top-content">
+			<div class="text-content">
+				<h2>Smith & Jones Architects</h2>
 
-<div class="top-content">
-	<div class="container">	
-		<div class="card">
-			<img class="img-right" src="img/home/home-img-1.png">
-			<div class="card-content">
-				<h3>Smith & Jones Architects</h3>
-				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-				<button class="button">Learn More</button>
+				<p>Et sed autem causeae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus
+					dissentiet in, nec no errem</p>
+
+				<button>Learn More</button>
 			</div>
-		</div>
-		<div class="card">
-			<img class="img-left" src="img/home/home-img-2.png">
-			<div class="card-content">
-				<h3>Futuristic Designs</h3>
-				<p>Et sed autem causae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus dissentiet in, nec no errem </p>
-				<button class="button">View Designs</button>
+
+			<div class="img-content">
+				<img src="img/home/home-img-1.png" alt="architect sketch">
 			</div>
-		</div>
-	</div>
-</div> <!--Futuristic-->
-<!--Top Content End-->
+		</section>
+
+		<section class="top-content inverse-content">
+			<div class="img-content">
+					<img class="jumbo" src="img/home/home-img-2.png" alt="building with blue sky">
+			</div>
+
+			<div class="text-content">
+				<h2>Futuristic Designs</h2>
+
+				<p>Et sed autem causeae appareat, tempor abhorreant te mei, facer facilisis sit ea. Eu timeam vidisse consectetuer sed. Duo etiam laboramus
+					dissentiet in, nec no errem</p>
+
+				<button>View Designs</button>
+			</div>
+				
+		</section>
 		
 
 <!-- Main Content Beginning -->
@@ -80,6 +92,11 @@
 				<img src="img/home/home-villas-img.png" alt="" class="pic3">
 				<h3 class="right-detail">THE VILLAS</h3>
 			</div>
+			<!------------------ MOBILE ------------------>
+			<div class="project-header mobile-img"> 
+				<img class="header-img" src="img/home/home-mobile-villas-img.png" alt="The Villas">
+				<h3 class="right-detail">THE VILLAS</h3>
+			</div>
 			<div class="project-content">
 				<p>The Villas bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
 				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
@@ -90,6 +107,11 @@
 			<div class="project-header">
 				<img src="img/home/home-outskirts-img.png" alt="" class="pic4">
 				<h3 class="left-detail">OUTSKIRTS</h3>
+			</div>
+			<!------------------ MOBILE ------------------>
+			<div class="project-header mobile-img"> 
+				<img class="header-img" src="img/home/home-mobile-outskirts-img.png" alt="The Villas">
+				<h3 class="right-detail">OUTSKIRTS</h3>
 			</div>
 			<div class="project-content">
 				<p>The Outskirts are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
@@ -102,6 +124,11 @@
 				<img src="img/home/home-the-blocks-img.png" alt="" class="pic5">
 				<h3 class="right-detail">THE BLOCKS</h3>
 			</div>
+			<!------------------ MOBILE ------------------>
+			<div class="project-header mobile-img"> 
+					<img class="header-img" src="img/home/home-mobile-the-blocks-img.png" alt="The Villas">
+					<h3 class="right-detail">THE BLOCKS</h3>
+			</div>
 			<div class="project-content">
 				<p>The Blocks are amazing to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.</p>
 				<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
@@ -112,48 +139,45 @@
 
 <!-- FOOTER CONTENT-->
 <footer>
-	<div>
-		<div>
-			<h3>Interested in starting a project?</h3>
-				<span>Let's talk:</span>
-			</h3>
-			<div class="form">
-				<form><input class="form-input" type="text" placeholder="Enter email"> </form>
+	<div class="contact">
+			<div class="search-bar"> 
+				<h3>Interested in starting a project?<br>Let's talk:</h3>
+
+				<div class="form">
+					<input class="form-input" type="text" placeholder="Enter email">
+				</div>
+				<p>We'll never share your email with anyone else.</p>
 			</div>
-			<p>We'll never share your email with anyone else.</p>
+
+			<div class="state-info">
+				<h3>New York</h3>
+				<h4>123 Lane</h4>
+				<h4>Suite 100</h4>
+				<h4>Albany, NY 12345</h4>
+				<h4>202 555 0144</h4>
+			</div>
+
+			<div class="state-info">
+				<h3>Florida</h3>
+				<h4>Ocean Drive</h4>
+				<h4>Suite 201</h4>
+				<h4>Orlando, FL 22345</h4>
+				<h4>502 555 0144</h4>
+			</div>
+
+			<div class="state-info">
+				<h3>California</h3>
+				<h4>Mountain Street</h4>
+				<h4>Suite 105</h4>
+				<h4>San Diego, CA 22345</h4>
+				<h4>702 555 0144</h4>
+			</div>
 		</div>
-		<div>
-			<h4>New York</h4>
-			<p>
-				123 Lane<br>
-				Suite 100<br>
-				Albany, NY 12345<br>
-				02 555 0144
-			</p>
-		</div> <!--NY-->
 
-		<div>
-			<h4>Florida</h4>
-			<p>
-				Ocean Drive<br>
-				Suite 201<br>
-				Orlando, FL 22345<br>
-				502 555 0144
-			</p>
-		</div> <!--Florida-->
-
-		<div>
-			<h4>California</h4>
-			<p>
-				Mountain Street<br>
-				Suite 105<br>
-				San Diego, CA<br>
-				702 555 0144
-			</p>
-		</div> <!--NY-->
+	<div class="copyright">
+	<p >Copyright 2018 Smith and Jones</p>
 	</div>
 
-	<p class="copyright">Copyright © 2018 Smith and Jones</p>
 </footer>
 
 <script src="js/index.js"></script>
