Fixed responsive errors on Home page

--- a/contact.html
+++ b/contact.html
@@ -125,49 +125,46 @@
 </div>
 
 <footer>
-<div>
-	<div>
-		<h3>Interested in starting a project?</h3>
-			<span>Let's talk:</span>
-		</h3>
-		<div class="form">
-			<form><input class="form-input" type="text" placeholder="Enter email"> </form>
+	<div class="contact">
+			<div class="search-bar"> 
+				<h3>Interested in starting a project?<br>Let's talk:</h3>
+
+				<div class="form">
+					<input class="form-input" type="text" placeholder="Enter email">
+				</div>
+				<p>We'll never share your email with anyone else.</p>
+			</div>
+
+			<div class="state-info">
+				<h3>New York</h3>
+				<h4>123 Lane</h4>
+				<h4>Suite 100</h4>
+				<h4>Albany, NY 12345</h4>
+				<h4>202 555 0144</h4>
+			</div>
+
+			<div class="state-info">
+				<h3>Florida</h3>
+				<h4>Ocean Drive</h4>
+				<h4>Suite 201</h4>
+				<h4>Orlando, FL 22345</h4>
+				<h4>502 555 0144</h4>
+			</div>
+
+			<div class="state-info">
+				<h3>California</h3>
+				<h4>Mountain Street</h4>
+				<h4>Suite 105</h4>
+				<h4>San Diego, CA 22345</h4>
+				<h4>702 555 0144</h4>
+			</div>
 		</div>
-		<p>We'll never share your email with anyone else.</p>
+
+	<div class="copyright">
+	<p >Copyright 2018 Smith and Jones</p>
 	</div>
-	<div>
-		<h4>New York</h4>
-		<p>
-			123 Lane<br>
-			Suite 100<br>
-			Albany, NY 12345<br>
-			02 555 0144
-		</p>
-	</div> <!--NY-->
-
-	<div>
-		<h4>Florida</h4>
-		<p>
-			Ocean Drive<br>
-			Suite 201<br>
-			Orlando, FL 22345<br>
-			502 555 0144
-		</p>
-	</div> <!--Florida-->
-
-	<div>
-		<h4>California</h4>
-		<p>
-			Mountain Street<br>
-			Suite 105<br>
-			San Diego, CA<br>
-			702 555 0144
-		</p>
-	</div> <!--NY-->
-</div>
-		
-		<p class="copyright">Copyright © 2018 Smith and Jones</p>
-</footer>	
+	
+	</footer>
 	
 
 	<script src="js/index.js"></script>
