--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<!-- <img src="img/nav-hamburger.png" alt="hamburger"> -->
 	<div class="dropdown">
 		<div class="dropdown-content">
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/index.html">Home</a>
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/services.html">Services</a>
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/contact.html">Contact</a>
+				<a class="menu-buttons" href="/index.html">Home</a>
+				<a class="menu-buttons" href="/services.html">Services</a>
+				<a class="menu-buttons" href="/contact.html">Contact</a>
 		</div>
 	</div>
 	<img class="menu-expand" onclick="openNav()" src="img/nav-hamburger.png" alt="menu-expand">
@@ -79,6 +79,7 @@
 			</div>
 				
 		</section>
+</section>
 		
 
 <!-- Main Content Beginning -->
