--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,19 @@
 
 <body>
 
+<!-- Menu Content -->
 <div class="top-menu-content">
 	<h2 class="brand">S&J</h2>
-	<img src="img/nav-hamburger.png" alt="hamburger">
-	<div class="dropdown-content">
-		<a href="">Home</a>
-		<a href="">Services</a>
-		<a href="">class</a>
+	<!-- <img src="img/nav-hamburger.png" alt="hamburger"> -->
+	<div class="dropdown">
+		<div class="dropdown-content">
+				<a class="menu-buttons" href="/index.html">Home</a>
+				<a class="menu-buttons" href="/services.html">Services</a>
+				<a class="menu-buttons" href="/contact.html">Contact</a>
+		</div>
 	</div>
+	<img class="menu-expand" onclick="openNav()" src="img/nav-hamburger.png" alt="menu-expand">
+	<img class="menu-close" onclick="closeNav()" src="img/nav-hamburger-close.png" alt="menu-close">
 </div>
 
 
