--- a/services.html
+++ b/services.html
@@ -17,9 +17,9 @@
 	<!-- <img src="img/nav-hamburger.png" alt="hamburger"> -->
 	<div class="dropdown">
 		<div class="dropdown-content">
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/index.html">Home</a>
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/services.html">Services</a>
-				<a class="menu-buttons" href="file:///Users/shayaanakbar/Desktop/LambdaJavaScript/User-Interface-Project-Week/contact.html">Contact</a>
+				<a class="menu-buttons" href="/index.html">Home</a>
+				<a class="menu-buttons" href="/services.html">Services</a>
+				<a class="menu-buttons" href="/contact.html">Contact</a>
 		</div>
 	</div>
 	<img class="menu-expand" onclick="openNav()" src="img/nav-hamburger.png" alt="menu-expand">
@@ -74,7 +74,6 @@
 	</div>
 </div>
 
-<!-- 
 <div class="container-services">
 	<div class="tabs-items">
 		<div class="tabs-item tabs-item-selected" data-tab="2">
